general cleanup and first challenge done

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "adv_of_code_": {
+    "adv_of_code_2020": {
       "commandName": "Project",
       "commandLineArgs": "-l"
     }
