much better. Much more expandable, less reliance on the console

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "adv_of_code_2020": {
       "commandName": "Project",
-      "commandLineArgs": "-d 4"
+      "commandLineArgs": "-l"
     }
   }
 }
