yeesh. had to get some help from reddit on the combination generation part, just couldn't wrap my head around it.

--- a/adv_of_code_2020.csproj
+++ b/adv_of_code_2020.csproj
@@ -29,6 +29,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="inputs\*.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
