--- a/adv_of_code_2020.csproj
+++ b/adv_of_code_2020.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework><NoWarn>1998</NoWarn>
+    <TargetFramework>net5.0</TargetFramework><NoWarn>1998</NoWarn>
     <PublishSingleFile>true</PublishSingleFile>
     <IncludeSymbolsInSingleFile>true</IncludeSymbolsInSingleFile>
     <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
